//protoc --gofast_out=. ./p2p/proto/msg.proto
syntax = "proto3";

option go_package = "./p2p/proto/msgpb";

message Message {
  bytes data = 1;
  bytes signature = 2;
}

message SaveBlockReq {
  message Proof {
    repeated bytes siblings = 3;
    uint32 path = 4;
  }
  bytes block = 1;
  bytes cid = 2;
  Proof proof = 3;
}

message FindValueReq {
  string hash = 1;
}

message FindValueResp {
  bytes data = 1;
}

message GetBlockReq {
  string hash = 1;
}